# mg-samples

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  RELEASE-NOTES.md  autogen.sh  build-ecos-ipaq  build-hhcf5249-r3  build-hhdrez328  build-linux-ep7312-skyeye  build-m68k-elf  build-rm9200  build-uclinux-arm3000  build-uclinux-xcopilot  build-utpmc-uclinux  configure.ac  configure.in
commlcd/: Makefile.am  comminput_ops.c  commlcd.c  commlcd_ops.c
complexscripts/: Makefile.am  complexscripts.c  helpers.c  helpers.h
complexscripts/res/: ar-utf-8.txt  en-utf-8.txt  he-utf-8.txt  ja-utf-8.txt  kr-utf-8.txt  th-utf-8.txt  ts_TS-utf-8.txt  zh-红楼梦-utf-8.txt  zh_CN-utf-8.txt  zh_TW-utf-8.txt
ctrl_dlg/: Makefile.am  button.c  combobox.c  coolbar.c  ctrls.h  custom_minigui.c  dlgdemo.c  dlgdemo.h  dlgdemo_res_cn.h  dlgdemo_res_en.h  dlgdemo_res_tw.h  dlgres.c  edit.c  grid.c  listbox.c  listview.c  menubutton.c  monthcalendar.c  newtoolbar.c  progbar.c  psdemo.c  resouce.h  static.c  subclass.c  timeedit.c  toolbar.c  trackbar.c  treeview.c
dbuff/: Makefile.am  dbuff.c  watch.c
font_text/: DestroyDynamicDevFont_upf.c  Makefile.am  arabicdemo.c  bmpfontdemo.c  font_select.c  font_text.c  font_text_res_cn.h  font_text_res_en.h  font_text_res_tw.h  hanguldemo.c  hebrewdemo.c  japandemo.c  japanfontdemo.c  testcase.c  thaifont.c  thaifont_res_cn.h  thaifont_res_en.h  thaifont_res_tw.h
graphics/: Makefile.am  graphics.c  graphics_res_cn.h  graphics_res_en.h  graphics_res_tw.h  graphicsex.c  graphicsex_res_cn.h  graphicsex_res_en.h  graphicsex_res_tw.h
housekeeper/: Makefile.am  housekeeper.c  housekeeper_res_cn.h  housekeeper_res_en.h  housekeeper_res_tw.h  map.c  map.h
incore-data/: Makefile.am  incore-data.c
lf_skin/: Makefile.am  custom_minigui.c  lf_skin.c  lf_skin.h  lf_skin_res_cn.h  lf_skin_res_en.h  lf_skin_res_tw.h  register_res.c
lf_tiny/: Makefile.am  lf_tiny.c  tiny_iconview.c  tiny_listbox1.c  tiny_listbox2.c
lf_tiny/res/: Makefile.am
look_feel/: Makefile.am  lf_common.h  lf_tiny.c  look_feel.c  tiny_iconview.c  tiny_listbox1.c  tiny_listbox2.c
mgeff/: Makefile.am
mgeff/animation/: Makefile.am  animation_async.c  animation_callback.c  animation_control.c  animation_curve.c  animation_setcontext.c  animation_setproperty.c  animation_sync.c  animation_window.c  effector.c  effector_custom.c  group_animation_parallel.c  group_animation_sequential.c
mgeff/ball/: Makefile.am  ball.c
mgeff/banner/: Makefile.am  banner.c  data.c
mgeff/btnshow/: Makefile.am  btnshow.c
mgeff/curve/: Makefile.am  curve.c
mgeff/custom-effector/: Makefile.am  customeffector.c
mgeff/effector/: Makefile.am  effector.c
mgeff/image-box/: Makefile.am  image.c  image.h  imagebox.c
mgeff/particle-sys/: Makefile.am  main.c
mginit/: desktop.c  desktop.h  desktop_res_cn.h  desktop_res_en.h  desktop_res_tw.h  mginit.c  taskbar.c
mgncs/: CMakeLists.txt  Makefile.am  button.c  checkbutton.c  colorbutton.c  combobox.c  container.c  data_binding.c  data_source.c  edit.c  event_listener.c  helloworld.c  helloworld_dlgbox.c  helloworld_domodal.c  iconview.c  list.c  listbox.c  listview.c  menubutton.c  monthcalender.c  ncs-window-types.h  ncs-windows.h  panel.c  progressbar.c  propsheet.c  radiogroup.c  resmgr.c  resmgr_demo.res  resmgr_main.c  resource.h  scrollbar.c  scrollview.c  spinbox.c  spinner.c  timer.c  trackbar.c  wnd_template.c
mgncs/res/: Makefile.am
mgplus/: Makefile.am
mgplus/animate/: Makefile.am  animate.c  animate.h  animate_sence.c  instruction.c  instruction.h  my_debug.h  p-code.c  p-code.h  pcode_test.c  radi_rally_animate.c  test.c  test_new.c  timeline.c
mgplus/animate/common_animates/: Makefile.am  alpha_animate.c  common_animates.c  common_animates.h  mk_test.sh  pin_test.c  push_pull_img_test.c  push_pull_wnd_test.c
mgplus/brush/: Makefile.am  brush_test.c
mgplus/colorcomposite/: Makefile.am  colorcomposite_test.c
mgplus/glyphoutline/: Makefile.am  glyphoutlinetest.c
mgplus/path/: Makefile.am  pathtest.c
mgplus/pen/: Makefile.am  pen_test.c
mgplus/src/: Makefile.am  blinds.c  centersplit.c  coverflow.c  cubicrotate.c  gradientdemo.c  lion_test.c  mgcompositedemo.c  mgglyph_outline.c  mgplus_efficiency.c  mgplustest.c  waterwave.c
mgplus/src/res/: Makefile.am
mgplus/worldtransform/: Makefile.am  worldtransform.c
mgutils/: Makefile.am
mgutils/templates/: CMakeLists.txt  Makefile.am  colorseldlg.c  fileopendlg.c  fontseldlg.c  infoshowdlg.c
minesweeper/: Makefile.am  minesweeper.c  minesweeper_res_cn.h  minesweeper_res_en.h  minesweeper_res_tw.h
notebook/: Makefile.am  custom_minigui.c  main.c  notebook.h  notebook_res_cn.h  notebook_res_en.h  notebook_res_tw.h
same/: Makefile.am  same.c  same_res_cn.h  same_res_en.h  same_res_tw.h
src/: Makefile.am  animation.c  animation_res_cn.h  animation_res_en.h  animation_res_tw.h  bitblt.c  bitblt_res_cn.h  bitblt_res_en.h  bitblt_res_tw.h  bmpbkgnd.c  bmpbkgnd_res_cn.h  bmpbkgnd_res_en.h  bmpbkgnd_res_tw.h  button.c  button_rec_cn.h  button_rec_en.h  button_rec_tw.h  capture.c  capture_res_cn.h  capture_res_en.h  capture_res_tw.h  caretdemo.c  caretdemo_res_cn.h  caretdemo_res_en.h  caretdemo_res_tw.h  colorupdate.c  combobox.c  combobox_res_cn.h  combobox_res_en.h  combobox_res_tw.h  coolbar.c  coolbar_res_cn.h  coolbar_res_en.h  coolbar_res_tw.h  createicon.c  createicon_res_cn.h  createicon_res_en.h  createicon_res_tw.h  cursordemo.c  cursordemo_res_cn.h  (+139 more)
tests/: Makefile.am  MiniGUI.cfg  README.md  basicshapingengine.c  bidicharactertest.c  bidilogachars2visachars.c  biditest.c  complexshapingengine.c  createlayoutinfo.c  createlogfontex.c  createtextrunsinfo.c  drawglyphstringex.c  drawshapedglyph.c  fetch-ucd-test.sh  getglyphsandbreaks.c  getglyphsbyrules.c  getglyphsextentfromuchars.c  getglyphsextentpointex.c  getshapedglyphsbasic.c  getucharsandbreaks.c  helpers.c  helpers.h  run-auto-test.sh  sliceallocator.c  ubidireorderline.c  ustrgetbreaks.c
tests/res/: LineBreakTest-strict.txt  LineBreakTest.txt  en-iso8859-1.txt
(+34 files in other folders)
