SUBDIRS=res
LDADD=-lmgncs

noinst_PROGRAMS=helloworld helloworld_domodal helloworld_dlgbox \
    wnd_template event_listener data_source data_binding \
    button checkbutton radiogroup menubutton colorbutton \
	spinner spinbox progressbar resmgr edit panel container \
	propsheet scrollview listview iconview listbox trackbar \
	scrollbar timer combobox monthcalender

resmgr_SOURCES=resmgr.c resmgr_main.c resource.h
monthcalender_SOURCES=monthcalender.c
helloworld_SOURCES=helloworld.c
helloworld_domodal_SOURCES=helloworld_domodal.c
helloworld_dlgbox_SOURCES=helloworld_dlgbox.c
wnd_template_SOURCES=wnd_template.c
event_listener_SOURCES=event_listener.c
data_source_SOURCES=data_source.c
data_binding_SOURCES=data_binding.c
checkbutton_SOURCES=checkbutton.c
radiogroup_SOURCES=radiogroup.c
button_SOURCES=button.c
menubutton_SOURCES=menubutton.c
colorbutton_SOURCES=colorbutton.c
spinner_SOURCES=spinner.c
spinbox_SOURCES=spinbox.c
progressbar_SOURCES=progressbar.c
panel_SOURCES=panel.c
edit_SOURCES=edit.c
container_SOURCES=container.c
propsheet_SOURCES=propsheet.c
scrollview_SOURCES=scrollview.c
listview_SOURCES=listview.c
iconview_SOURCES=iconview.c
listbox_SOURCES=listbox.c
trackbar_SOURCES=trackbar.c
scrollbar_SOURCES=scrollbar.c
timer_SOURCES=timer.c
combobox_SOURCES=combobox.c

EXTRA_DIST=resmgr_demo.res ncs-window-types.h ncs-windows.h

