EXTRA_DIST= card.png  clock.png  dc.png  dict.png  \
			email.png  gis.png  ime_view.png \
			mac_phone.png  month_cal.png \
			music.png  notebook.png  set.png \
			card.ico  clock.ico  dc.ico  \
			dict.ico  email.ico  ime_view.ico  \
			mac_phone.ico  month_cal.ico  music.ico  \
			notebook.ico  set.ico

