LDADD=-lmgeff @APP_LIBS@

noinst_PROGRAMS= \
animation_async     animation_curve        animation_sync    effector_custom \
animation_callback  animation_setcontext   animation_window  group_animation_parallel \
animation_control   animation_setproperty  effector      group_animation_sequential

animation_async_SOURCES=animation_async.c
animation_curve_SOURCES=animation_curve.c
animation_sync_SOURCES=animation_sync.c
effector_custom_SOURCES=effector_custom.c
animation_callback_SOURCES=animation_callback.c
animation_setcontext_SOURCES=animation_setcontext.c
animation_window_SOURCES=animation_window.c
group_animation_parallel_SOURCES=group_animation_parallel.c
animation_control_SOURCES=animation_control.c
animation_setproperty_SOURCES=animation_setproperty.c
effector_SOURCES=effector.c
group_animation_sequential_SOURCES=group_animation_sequential.c

