noinst_PROGRAMS=colorseldlg fileopendlg fontseldlg infoshowdlg

colorseldlg_SOURCES=colorseldlg.c
fileopendlg_SOURCES=fileopendlg.c
fontseldlg_SOURCES=fontseldlg.c
infoshowdlg_SOURCES=infoshowdlg.c

colorseldlg_LDADD=../../src/libmgutils.la @APP_LIBS@
fileopendlg_LDADD=../../src/libmgutils.la @APP_LIBS@
fontseldlg_LDADD=../../src/libmgutils.la @APP_LIBS@
infoshowdlg_LDADD=../../src/libmgutils.la @APP_LIBS@
