TOP_DIR=../..
AM_CPPFLAGS = -I.. -I../../include

libanimateincludedir = $(includedir)

noinst_LTLIBRARIES = libcommon_animates.la

SRC_FILES = common_animates.c alpha_animate.c

HDR_FILES = common_animates.h

INSTALL_HDRS_FILES =  common_animates.h 

libanimateinclude_HEADERS=$(INSTALL_HDRS_FILES) 

libcommon_animates_la_SOURCES = $(SRC_FILES) $(HDR_FILES)

