EXTRA_DIST=1.bmp  5.bmp  9.bmp  CoverFlow1.bmp  CoverFlow5.bmp  gundam.bmp \
		 pic1.bmp timesi.ttf 2.bmp  6.bmp  arial.ttf CoverFlow2.bmp  CoverFlow6.bmp \
		 pic1.jpg 3.bmp  7.bmp  butterfly.png CoverFlow3.bmp  CoverFlow7.bmp pic2.jpg \
		 4.bmp  8.bmp  compositing.bmp  CoverFlow4.bmp  flower_2.png test_bk.jpg
